kubernetes-dashboard-oauth2/oauth2-forwardauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forwardauth
  namespace: kubernetes-dashboard
spec:
  forwardAuth:
    address: http://oauth2-proxy.kubernetes-dashboard.svc.cluster.local:80
    trustForwardHeader: true
    authResponseHeaders:
      - Authorization
      - X-Auth-Request-User
      - X-Auth-Request-Groups
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - X-Auth-Request-Access-Token
