kubernetes-dashboard-oauth2/oauth2-proxy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`k8s.jamezrin.com`) && PathPrefix(`/oauth2/`)"
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 80
      middlewares:
        - name: auth-headers
    - match: Host(`k8s.jamezrin.com`)
      kind: Rule
      middlewares:
        - name: auth-headers
        - name: oauth2-forwardauth
        - name: oauth2-errors
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
  tls:
    certResolver: letsencrypt
